--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@uiw/react-md-editor": "^4.0.8",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.10.0",
+    "convex": "^1.31.7",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
